--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,3 +29,23 @@ background: #c9c9c9;
 opacity: 10px;
 border-radius: 10px;
 }
+
+
+.rec.rec-arrow {
+  background-color: #0B1014;
+  color: #eeeeee;
+}
+  
+.rec.rec-arrow:hover {
+  background-color: #393b3f;
+}
+  
+.rec.rec-arrow:disabled {
+  visibility: hidden;
+}
+    
+.rec-carousel-item:focus {
+ outline: none;
+ box-shadow: inset 0 0 1px 1px lightgrey;
+ background-color: #eaeaea;
+}
